dashboard/app/assets/stylesheets/projects.scss
@import "color";

.projects-page {
  h1 {
    text-align: center;
  }
  .level_link,.level_link:link, .level_link:visited {
    background-color: $purple;
    border-color: $purple;
    font-size: 14px;
    padding: 5px 10px;
    color: $white;
    &:hover {
      background-color: $level_current;
      border-color: $level_current;
      text-decoration: none;
    }
  }
}

$projects-table-width: 850px;

.projects-table-wrapper {
  width: $projects-table-width;
}

.projects {
  width: $projects-table-width;
  table-layout: auto;
  margin: 10px 0;

  th {
    padding: 10px;
    background-color: $bkgnd_color;
    color: $white;
    text-align: left;

    a, a:hover, a:link, a:visited {
      color: $white !important;
    }
  }
  tr {
    vertical-align: top;
  }
  td {
    padding: 10px;
    border: 1px solid $lighter_gray;
  }
  .name {
    font-size: 1.5em;
  }

  input {
    width: 90%;
  }
}

.level-buttons {
  margin: 20px 5px;
}

.project-links {
  .level_link,.level_link:link, .level_link:visited {
    background-color: $purple;
    border-color: $purple;
    font-size: 14px;
    padding: 5px 10px;
    color: $white;
    &:hover {
      background-color: $level_current;
      border-color: $level_current;
      text-decoration: none;
    }
  }
}

.loading {
  height: 200px;
  background: image-url("spinner-big.gif") no-repeat center center;
}

.start_new_project_header {
  font-family: "Gotham 4r";
  font-size: 18px;
  margin-bottom: 5px;
}

.new_project_links_wrapper {
  margin-left: -5px;
}

